Prevent hero to overlap mobile menu

--- a/new-site/src/components/Hero.scss
+++ b/new-site/src/components/Hero.scss
@@ -29,7 +29,7 @@
   box-sizing: border-box;
   padding: var(--spacing-layout-s);
   position: relative;
-  z-index: 1000;
+  z-index: 1;
 
   &:after {
     clear: both;
